Methods separated into traits

--- a/biblio_ptero.bib
+++ b/biblio_ptero.bib
@@ -5,6 +5,19 @@
 %====================================================================
 %                       IBM MODELS
 %====================================================================
+%Separation into modules
+@article{Erguler2018Modules,
+	doi = {10.12688/f1000research.15824.1},
+	url = {https://doi.org/10.12688\%2Ff1000research.15824.1},
+	year = 2018,
+	month = {aug},
+	publisher = {F1000 Research Ltd},
+	volume = {7},
+	pages = {1220},
+	author = {Kamil Erguler},
+	title = {{sPop}: Age-structured discrete-time population dynamics model in C, Python, and R},
+	journal = {F1000Research}
+}
 %Individual-based models review/summary
 @article{DeAngelis2014IBM,
 	doi = {10.12703/p6-39},
@@ -51,9 +64,8 @@
 	volume = {7},
 	number = {3-4},
 	pages = {219--234},
-	author = {CHARLES B. MILLER and DANIEL R. LYNCH and FRAN{\c{C}}OIS CARLOTTI and WENDY GENTLEMAN and CRAIG V. W. LEWIS},
-	title = {Coupling of an individual-based population dynamic model of
-		            Calanus finmarchicus
+	author = {Miller, Charles B and Lynch, Daniel R and Carlotti, Francois and Gentleman, Wendy and Lewis, Craig VW},
+	title = {Coupling of an individual-based population dynamic model of Calanus finmarchicus
 		            to a circulation model for the Georges Bank region},
 	journal = {Fisheries Oceanography}
 }
@@ -103,6 +115,104 @@
 %====================================================================
 %                       PTEROPOD IBM PAPERS
 %====================================================================
+%spawning periods Mediterranean
+@article{Howes2015Mediterranean,
+	doi = {10.3354/meps11322},
+	url = {https://doi.org/10.3354\%2Fmeps11322},
+	year = 2015,
+	month = {jul},
+	publisher = {Inter-Research Science Center},
+	volume = {531},
+	pages = {193--206},
+	author = {EL Howes and L Stemmann and C Assailly and JO Irisson and M Dima and J Bijma and JP Gattuso},
+	title = {Pteropod time series from the North Western Mediterranean (1967-2003): impacts of {pH} and climate variability},
+	journal = {Marine Ecology Progress Series}
+}
+%Reproduction
+@article{Dadon1992Reproduction,
+	doi = {10.1007/bf00350035},
+	url = {https://doi.org/10.1007\%2Fbf00350035},
+	year = 1992,
+	month = {nov},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {114},
+	number = {3},
+	pages = {439--442},
+	author = {J{\'{o}}se R. Dadon and Lilia Lauria de Cidre},
+	title = {The reproductive cycle of the Thecosomatous pteropod Limacina retroversa in the western South Atlantic},
+	journal = {Marine Biology}
+}
+%free floating eggs
+@article{Schalk1990SeasonalSpatial,
+	doi = {10.1007/bf01344271},
+	url = {https://doi.org/10.1007\%2Fbf01344271},
+	year = 1990,
+	month = {feb},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {105},
+	number = {1},
+	pages = {59--71},
+	author = {P. H. Schalk},
+	title = {Spatial and seasonal variation in pteropods (Mollusca) of Indo-Malayan waters related to watermass distribution},
+	journal = {Marine Biology}
+}
+%Reproduction
+@article{Lalli1978Reproduction,
+	doi = {10.1111/j.1469-7998.1978.tb03359.x},
+	url = {https://doi.org/10.1111\%2Fj.1469-7998.1978.tb03359.x},
+	year = 1978,
+	month = {aug},
+	publisher = {Wiley},
+	volume = {186},
+	number = {1},
+	pages = {95--108},
+	author = {Carol M. Lalli and Fred E. Wells},
+	title = {Reproduction in the genus Limacina (Opisthobranchia: Thecosomata)},
+	journal = {Journal of Zoology}
+}
+
+%overwintering
+@article{Gannefors2005Overwintering,
+	doi = {10.1007/s00227-004-1544-y},
+	url = {https://doi.org/10.1007\%2Fs00227-004-1544-y},
+	year = 2005,
+	month = {feb},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {147},
+	number = {1},
+	pages = {169--177},
+	author = {Charlotte Gannefors and Marco Böer and Gerhard Kattner and Martin Graeve and Ketil Eiane and Bj{\o}rn Gulliksen and Haakon Hop and Stig Falk-Petersen},
+	title = {The Arctic sea butterfly Limacina helicina: lipids and life strategy},
+	journal = {Marine Biology}
+}
+
+
+%Traits of zooplankton 
+@article{Litchman2013traits,
+	doi = {10.1093/plankt/fbt019},
+	url = {https://doi.org/10.1093\%2Fplankt\%2Ffbt019},
+	year = 2013,
+	month = {mar},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {35},
+	number = {3},
+	pages = {473--484},
+	author = {Elena Litchman and Mark D. Ohman and Thomas Ki{\o}rboe},
+	title = {Trait-based approaches to zooplankton communities},
+	journal = {Journal of Plankton Research}
+}
+
+%Unbeaching
+@article{Delandmeter2019Unbeaching,
+	doi = {10.5194/gmd-2018-339-ac2},
+	url = {https://doi.org/10.5194%2Fgmd-2018-339-ac2},
+	year = 2019,
+	month = {apr},
+	publisher = {Copernicus {GmbH}},
+	author = {Philippe Delandmeter},
+	title = {The Parcels v2.0 Lagrangian framework: new field interpolation schemes}
+}
+
 %Global DVM patterns (Timing of DVM)
 @article{Bianchi2015GlobalDVM,
 	doi = {10.1002/lno.10219},
@@ -204,6 +314,20 @@
 	journal = {{ICES} Journal of Marine Science}
 }
 %Original growth function equation
+@article{Bertalanffy1938,
+ ISSN = {00187143, 15346617},
+ URL = {http://www.jstor.org/stable/41447359},
+ author = {Ludwig von Bertalanffy},
+ journal = {Human Biology},
+ number = {2},
+ pages = {181--213},
+ publisher = {Wayne State University Press},
+ title = {A quantitative theory of organic growth (inquiries on grwoth laws. II)},
+ volume = {10},
+ year = {1938}
+}
+
+
 @Article{Somers1988,
   author={Somers, I.F.},
   title={On a seasonally oscillating growth function},
@@ -602,7 +726,7 @@ title = {Limacina retroversa's response to combined effects of ocean acidificati
 journal = {Estuarine, Coastal and Shelf Science},
 volume = {113},
 pages = {163 - 171},
-year = {201},
+year = {2012},
 note = {The MIRACLE Project (Mercury Interdisciplinary Research project for Appropriate Clam farming in Lagoon Environment)},
 issn = {0272-7714},
 doi = {https://doi.org/10.1016/j.ecss.2012.07.019},
@@ -912,6 +1036,7 @@ keywords = {ocean acidification, pteropods, salinity, carbonate, high latitude, 
 %====================================================================
 %                       MODELLING DVM
 %====================================================================
+
 %Modelling DVM patterns
 @article{Han1998ModellingDVM,
 	doi = {10.1093/plankt/20.8.1463},
@@ -986,6 +1111,20 @@ keywords = {ocean acidification, pteropods, salinity, carbonate, high latitude, 
 %====================================================================
 %               ACIDIFICATION (REGIONAL AND GLOBAL)
 %====================================================================
+%Protoconch dissolution
+@article{Johnson2016,
+	doi = {10.5194/bg-2016-467},
+	url = {https://doi.org/10.5194%2Fbg-2016-467},
+	year = 2016,
+	month = {nov},
+	publisher = {Copernicus {GmbH}},
+	pages = {1--25},
+	author = {Kevin M. Johnson and Umihiko Hoshijima and Cailan S. Sugano and Alice T. Nguyen and Gretchen E. Hofmann},
+	title = {Shell dissolution observed in Limacina helicina antarctica from the Ross Sea, Antarctica: paired shell characteristics and in situ seawater
+		chemistry},
+	journal = {Biogeosciences Discussions}
+}
+
 %Acidification global
 @article{Orr2005Acidification,
 	doi = {10.1038/nature04095},
