--- a/biblio_ptero.bib
+++ b/biblio_ptero.bib
@@ -115,6 +115,20 @@
 %====================================================================
 %                       PTEROPOD IBM PAPERS
 %====================================================================
+%lipid storages
+@article{Maas2020Lipids,
+	doi = {10.1016/j.pocean.2020.102371},
+	url = {https://doi.org/10.1016\%2Fj.pocean.2020.102371},
+	year = 2020,
+	month = {jul},
+	publisher = {Elsevier {BV}},
+	volume = {186},
+	pages = {102371},
+	author = {Amy E. Maas and Gareth L. Lawson and Alexander J. Bergan and Zhaohui Aleck Wang and Ann M. Tarrant},
+	title = {Seasonal variation in physiology and shell condition of the pteropod Limacina retroversa in the Gulf of Maine relative to life cycle and carbonate chemistry},
+	journal = {Progress in Oceanography}
+}
+
 %spawning periods Mediterranean
 @article{Howes2015Mediterranean,
 	doi = {10.3354/meps11322},
