--- a/new_main.tex
+++ b/new_main.tex
@@ -176,7 +176,7 @@ Pteropods \sep Individual-based modelling  \sep Ocean acidification \sep Califor
 
 
 
-\section{Data and methods}
+\section{Pteropod individual-based model setup}
 \input{chapters/Data2.tex}
 
 
